# vision-recognise

./: VISION_GIMBAL_INTERFACE_SYNC.md
install/: local_setup.sh  setup.sh
install/yuntai_controller/lib/yuntai_controller/: detect_node  detect_subscribe  image_pub
install/yuntai_controller/share/yuntai_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/yuntai_controller/share/yuntai_controller/launch/: rdk_x5_dual_serial.launch.py
log/: latest_build
src/yuntai_controller/: package.xml  setup.cfg  setup.py
src/yuntai_controller/yuntai_controller/: detect_node.py  detect_subscribe.py
